--- a/src/pages/configurator.njk
+++ b/src/pages/configurator.njk
@@ -64,6 +64,22 @@
 </head>
 <body class="has-header u-bg-light">
     <div class="u-main">
+        <div class="akit-component-statusbar success">
+            <div class="akit-component-statusbar__status">
+                <span class="fa fa-check"></span>
+            </div>
+
+            <div class="akit-component-statusbar__content">
+                <p>
+                    <span>Synchroniseren is gelukt!</span>
+                </p>
+            </div>
+
+            <div class="akit-component-statusbar__close">
+                <span class="fa fa-times"></span>
+            </div>
+        </div>
+
         <header class="o-header o-header--fixed">
             <a href="#" class="o-header__logo">
                 <img src="../images/a-logo.svg" alt="Officieel Logo Antwerpen">
@@ -109,7 +125,7 @@
                         </ul>
 
                         <a href="/pages/synchronize.html" class="a-button a-button--success has-icon-left">
-                            <i class="fa fa-refresh"></i>Synchroniseren
+                            <i class="fa fa-refresh fa-spin"></i>Synchroniseren
                         </a>
                     </div>
 
