--- a/src/pages/synchronize.njk
+++ b/src/pages/synchronize.njk
@@ -237,7 +237,7 @@
                         </ul>
 
                         <a href="/pages/synchronize.html" class="a-button a-button--success has-icon-left">
-                            <i class="fa fa-refresh"></i>Synchroniseren
+                            <i class="fa fa-refresh fa-spin"></i>Synchroniseren
                         </a>
                     </div>
 
