--- a/src/styles/organisms/_organisms.configurator.scss
+++ b/src/styles/organisms/_organisms.configurator.scss
@@ -46,7 +46,7 @@ body {
 .o-configurator__header {
   background-color: $brand-primary;
   color: $white;
-  padding: rem(24px);
+  padding: $spacer;
 }
 
 .o-configurator__nav {
@@ -87,10 +87,16 @@ body {
   border-bottom: 1px solid $border-color-light;
   border-left: 1px solid $border-color-light;
   border-right: 1px solid $border-color-light;
-  padding: rem(48px) rem(24px);
+  padding: $spacer;
 }
 
-.o-configurator__body--split {
+.o-configurator__body__header {
+  margin-bottom: $spacer;
+  text-align: right;
+  width: 100%;
+}
+
+.o-configurator__body__row {
 
   @include at($screen-sm) {
     display: flex;
@@ -107,17 +113,17 @@ body {
   &:nth-child(odd) {
     @include at($screen-sm) {
       margin-bottom: 0;
-      padding-right: rem(24px);
+      padding-right: $spacer;
     }
 
     border-right: 1px solid $border-color-light;
-    margin-bottom: rem(24px);
+    margin-bottom: $spacer;
   }
 
   &:nth-child(even) {
 
     @include at($screen-sm) {
-      padding-left: rem(24px);
+      padding-left: $spacer;
     }
   }
 }
@@ -134,7 +140,7 @@ body {
   border-right: 1px solid $border-color-light;
   display: flex;
   flex-direction: column;
-  padding: rem(16px) rem(24px);
+  padding: $spacer;
 }
 
 .o-configurator__footer__column {
@@ -146,11 +152,11 @@ body {
     }
   }
 
+  width: 100%;
+
   &:first-child [class*='a-button'] {
     margin-bottom: rem(12px);
   }
-
-  width: 100%;
 
   [class*='a-button'] {
     @include at($screen-sm) {
@@ -163,7 +169,7 @@ body {
 
 .a-form-half {
   &:not(:last-child) {
-    margin-bottom: rem(24px);
+    margin-bottom: $spacer;
   }
 
   @include at($screen-md) {
@@ -177,7 +183,7 @@ body {
   > .a-timepicker {
 
     &:nth-child(odd) {
-      margin-bottom: rem(24px);
+      margin-bottom: $spacer;
     }
 
     @include at($screen-md) {
@@ -262,7 +268,8 @@ body {
   cursor: pointer;
   transition: background $animation-normal;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     background-color: $brand-secondary;
   }
 }
