Updated synchronize page

--- a/src/pages/synchronize.njk
+++ b/src/pages/synchronize.njk
@@ -237,157 +237,164 @@
                         </ul>
 
                         <a href="/pages/synchronize.html" class="a-button a-button--success has-icon-left">
-                            <i class="fa fa-refresh fa-spin"></i>Synchroniseren
+                            <i class="fa fa-refresh"></i>Synchroniseren
                         </a>
                     </div>
 
-                    <div class="o-configurator__body o-configurator__body--split">
-                        <div class="o-configurator__body__column">
-                            <div class="a-form-half">
-                                <div class="a-input">
-                                    <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
-                                </div>
 
-                                <div class="a-input has-icon-right">
-                                    <div class="a-input__wrapper">
-                                        <select name="input-selected" id="input-select">
-                                            <option disabled selected>Maak uw keuze...</option>
-                                            <option value="1">Optie 1</option>
-                                            <option value="2">Optie 2</option>
-                                            <option value="3">Optie 3</option>
-                                            <option value="4" disabled>Optie 4 disabled</option>
-                                            <option value="5">Optie 5</option>
-                                        </select>
-
-                                        <span class="fa fa-angle-down"></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="a-form-half">
-                                <div class="a-input">
-                                    <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
-                                </div>
-
-                                <div class="a-input has-icon-right">
-                                    <div class="a-input__wrapper">
-                                        <select name="input-selected" id="input-select">
-                                            <option disabled selected>Maak uw keuze...</option>
-                                            <option value="1">Optie 1</option>
-                                            <option value="2">Optie 2</option>
-                                            <option value="3">Optie 3</option>
-                                            <option value="4" disabled>Optie 4 disabled</option>
-                                            <option value="5">Optie 5</option>
-                                        </select>
-
-                                        <span class="fa fa-angle-down"></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="a-form-half">
-                                <div class="a-input">
-                                    <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
-                                </div>
-
-                                <div class="a-input has-icon-right">
-                                    <div class="a-input__wrapper">
-                                        <select name="input-selected" id="input-select">
-                                            <option disabled selected>Maak uw keuze...</option>
-                                            <option value="1">Optie 1</option>
-                                            <option value="2">Optie 2</option>
-                                            <option value="3">Optie 3</option>
-                                            <option value="4" disabled>Optie 4 disabled</option>
-                                            <option value="5">Optie 5</option>
-                                        </select>
-
-                                        <span class="fa fa-angle-down"></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="a-form-half">
-                                <div class="a-input">
-                                    <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
-                                </div>
-
-                                <div class="a-input has-icon-right">
-                                    <div class="a-input__wrapper">
-                                        <select name="input-selected" id="input-select">
-                                            <option disabled selected>Maak uw keuze...</option>
-                                            <option value="1">Optie 1</option>
-                                            <option value="2">Optie 2</option>
-                                            <option value="3">Optie 3</option>
-                                            <option value="4" disabled>Optie 4 disabled</option>
-                                            <option value="5">Optie 5</option>
-                                        </select>
-
-                                        <span class="fa fa-angle-down"></span>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="o-configurator__body">
+                        <div class="o-configurator__body__header">
+                            <small>Laatst gesynchroniseerd: 13/06/2017 om 10:27:09</small>
                         </div>
 
-                        <div class="o-configurator__body__column">
-                            <div class="a-form-half">
-                                <div class="a-input">
-                                    <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                        <div class="o-configurator__body__row">
+                            <div class="o-configurator__body__column">
+                                <div class="a-form-half">
+                                    <div class="a-input">
+                                        <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                                    </div>
+
+                                    <div class="a-input has-icon-right">
+                                        <div class="a-input__wrapper">
+                                            <select name="input-selected" id="input-select">
+                                                <option disabled selected>Maak uw keuze...</option>
+                                                <option value="1">Optie 1</option>
+                                                <option value="2">Optie 2</option>
+                                                <option value="3">Optie 3</option>
+                                                <option value="4" disabled>Optie 4 disabled</option>
+                                                <option value="5">Optie 5</option>
+                                            </select>
+
+                                            <span class="fa fa-angle-down"></span>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="a-input has-icon-right">
-                                    <div class="a-input__wrapper">
-                                        <select name="input-selected" id="input-select">
-                                            <option disabled selected>Maak uw keuze...</option>
-                                            <option value="1">Optie 1</option>
-                                            <option value="2">Optie 2</option>
-                                            <option value="3">Optie 3</option>
-                                            <option value="4" disabled>Optie 4 disabled</option>
-                                            <option value="5">Optie 5</option>
-                                        </select>
+                                <div class="a-form-half">
+                                    <div class="a-input">
+                                        <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                                    </div>
 
-                                        <span class="fa fa-angle-down"></span>
+                                    <div class="a-input has-icon-right">
+                                        <div class="a-input__wrapper">
+                                            <select name="input-selected" id="input-select">
+                                                <option disabled selected>Maak uw keuze...</option>
+                                                <option value="1">Optie 1</option>
+                                                <option value="2">Optie 2</option>
+                                                <option value="3">Optie 3</option>
+                                                <option value="4" disabled>Optie 4 disabled</option>
+                                                <option value="5">Optie 5</option>
+                                            </select>
+
+                                            <span class="fa fa-angle-down"></span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="a-form-half">
+                                    <div class="a-input">
+                                        <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                                    </div>
+
+                                    <div class="a-input has-icon-right">
+                                        <div class="a-input__wrapper">
+                                            <select name="input-selected" id="input-select">
+                                                <option disabled selected>Maak uw keuze...</option>
+                                                <option value="1">Optie 1</option>
+                                                <option value="2">Optie 2</option>
+                                                <option value="3">Optie 3</option>
+                                                <option value="4" disabled>Optie 4 disabled</option>
+                                                <option value="5">Optie 5</option>
+                                            </select>
+
+                                            <span class="fa fa-angle-down"></span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="a-form-half">
+                                    <div class="a-input">
+                                        <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                                    </div>
+
+                                    <div class="a-input has-icon-right">
+                                        <div class="a-input__wrapper">
+                                            <select name="input-selected" id="input-select">
+                                                <option disabled selected>Maak uw keuze...</option>
+                                                <option value="1">Optie 1</option>
+                                                <option value="2">Optie 2</option>
+                                                <option value="3">Optie 3</option>
+                                                <option value="4" disabled>Optie 4 disabled</option>
+                                                <option value="5">Optie 5</option>
+                                            </select>
+
+                                            <span class="fa fa-angle-down"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="a-form-half">
-                                <div class="a-input">
-                                    <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
-                                </div>
+                            <div class="o-configurator__body__column">
+                                <div class="a-form-half">
+                                    <div class="a-input">
+                                        <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                                    </div>
 
-                                <div class="a-input has-icon-right">
-                                    <div class="a-input__wrapper">
-                                        <select name="input-selected" id="input-select">
-                                            <option disabled selected>Maak uw keuze...</option>
-                                            <option value="1">Optie 1</option>
-                                            <option value="2">Optie 2</option>
-                                            <option value="3">Optie 3</option>
-                                            <option value="4" disabled>Optie 4 disabled</option>
-                                            <option value="5">Optie 5</option>
-                                        </select>
+                                    <div class="a-input has-icon-right">
+                                        <div class="a-input__wrapper">
+                                            <select name="input-selected" id="input-select">
+                                                <option disabled selected>Maak uw keuze...</option>
+                                                <option value="1">Optie 1</option>
+                                                <option value="2">Optie 2</option>
+                                                <option value="3">Optie 3</option>
+                                                <option value="4" disabled>Optie 4 disabled</option>
+                                                <option value="5">Optie 5</option>
+                                            </select>
 
-                                        <span class="fa fa-angle-down"></span>
+                                            <span class="fa fa-angle-down"></span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="a-form-half">
-                                <div class="a-input">
-                                    <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                                <div class="a-form-half">
+                                    <div class="a-input">
+                                        <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                                    </div>
+
+                                    <div class="a-input has-icon-right">
+                                        <div class="a-input__wrapper">
+                                            <select name="input-selected" id="input-select">
+                                                <option disabled selected>Maak uw keuze...</option>
+                                                <option value="1">Optie 1</option>
+                                                <option value="2">Optie 2</option>
+                                                <option value="3">Optie 3</option>
+                                                <option value="4" disabled>Optie 4 disabled</option>
+                                                <option value="5">Optie 5</option>
+                                            </select>
+
+                                            <span class="fa fa-angle-down"></span>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="a-input has-icon-right">
-                                    <div class="a-input__wrapper">
-                                        <select name="input-selected" id="input-select">
-                                            <option disabled selected>Maak uw keuze...</option>
-                                            <option value="1">Optie 1</option>
-                                            <option value="2">Optie 2</option>
-                                            <option value="3">Optie 3</option>
-                                            <option value="4" disabled>Optie 4 disabled</option>
-                                            <option value="5">Optie 5</option>
-                                        </select>
+                                <div class="a-form-half">
+                                    <div class="a-input">
+                                        <input type="text" name="input-text" id="input-text" placeholder="Placeholder" />
+                                    </div>
 
-                                        <span class="fa fa-angle-down"></span>
+                                    <div class="a-input has-icon-right">
+                                        <div class="a-input__wrapper">
+                                            <select name="input-selected" id="input-select">
+                                                <option disabled selected>Maak uw keuze...</option>
+                                                <option value="1">Optie 1</option>
+                                                <option value="2">Optie 2</option>
+                                                <option value="3">Optie 3</option>
+                                                <option value="4" disabled>Optie 4 disabled</option>
+                                                <option value="5">Optie 5</option>
+                                            </select>
+
+                                            <span class="fa fa-angle-down"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
