Added add button to configurator

--- a/src/pages/configurator.njk
+++ b/src/pages/configurator.njk
@@ -410,6 +410,12 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="u-text-right u-margin-top-xs">
+                            <button class="a-button a-button--transparent">
+                                Status toevoegen
+                            </button>
+                        </div>
                     </div>
 
                     <div class="o-configurator__footer">
