--- a/src/pages/delete-configuration.njk
+++ b/src/pages/delete-configuration.njk
@@ -169,7 +169,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -196,7 +196,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -223,7 +223,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -250,7 +250,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -277,7 +277,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -306,7 +306,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -333,7 +333,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -360,7 +360,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -387,7 +387,7 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
@@ -414,11 +414,17 @@
                                         </div>
                                     </div>
 
-                                    <a href="/pages/delete-configuration" class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="u-text-right u-margin-top-xs">
+                            <button class="a-button a-button--transparent">
+                                Status toevoegen
+                            </button>
                         </div>
                     </div>
 
