--- a/src/pages/synchronize.njk
+++ b/src/pages/synchronize.njk
@@ -271,9 +271,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
 
                                 <div class="m-configuration">
@@ -298,9 +298,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
 
                                 <div class="m-configuration">
@@ -325,9 +325,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
 
                                 <div class="m-configuration">
@@ -352,9 +352,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
 
                                 <div class="m-configuration">
@@ -379,9 +379,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
 
@@ -408,9 +408,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
 
                                 <div class="m-configuration">
@@ -435,9 +435,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
 
                                 <div class="m-configuration">
@@ -462,9 +462,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
 
                                 <div class="m-configuration">
@@ -489,9 +489,9 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
 
                                 <div class="m-configuration">
@@ -516,11 +516,17 @@
                                         </div>
                                     </div>
 
-                                    <button class="a-button-transparent a-button--default has-icon">
+                                    <a href="/pages/delete-configuration.html" class="a-button-transparent a-button--default has-icon">
                                         <i class="fa fa-trash"></i>
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="u-text-right u-margin-top-xs">
+                            <button class="a-button a-button--transparent">
+                                Status toevoegen
+                            </button>
                         </div>
                     </div>
 
